fix: change z-index to fix menu overlapping on modal in mobile

--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -83,7 +83,7 @@ img {
     top: 15px;
     right: 15px;
     position: fixed;
-    z-index: 5;
+    z-index: 2;
   }
 }
 
@@ -175,7 +175,7 @@ main {
 .bground {
   display: none;
   position: fixed;
-  z-index: 1;
+  z-index: 3;
   left: 0;
   top: 0;
   height: 100%;
